# cookiecutter-sixninetynine

./: README.md  cookiecutter.json  setup.cfg
docs/: index.rst
{{cookiecutter.project_slug}}/: .gitignore  MANIFEST.in  README.md  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/test/: test_{{cookiecutter.project_slug}}.py
