[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[flake8]
ignore = E121,E123,E226,W292
max-line-length = 120

[pytest]
addopts = --ignore build/ --ignore dist/
